@@ -1,2 +1,2 @@
 #!/usr/bin/env bash
-java -cp "target/classes:$(mvn dependency:build-classpath -q -Dmdep.outputFile=/dev/stdout)" songscribe.SongScribe
+java --enable-native-access=ALL-UNNAMED -cp "target/classes:$(mvn dependency:build-classpath -q -Dmdep.outputFile=/dev/stdout)" songscribe.SongScribe
